--- a/config.ini
+++ b/config.ini
@@ -22,8 +22,13 @@ decimal_places = 3
 significant_digits = 2
 rounding_mode = 5_percent  # round_up or 5_percent
 
+[Language]
+current = en
+use_system_locale = true
+
 [Messages]
 equation_change = モデル式の変更により、以下の変数の変更が必要です：\n\n
+
 [Distribution]
 normal_distribution = 1
 rectangular_distribution = 1.732050808
@@ -51,3 +56,4 @@ infinity = 1.960
 
 [Version]
 version = 1.0.0
+
