--- a/config.ini
+++ b/config.ini
@@ -23,8 +23,8 @@ significant_digits = 2
 rounding_mode = 5_percent  # round_up or 5_percent
 
 [Language]
-current = en
-use_system_locale = true
+current = ja
+use_system_locale = false
 
 [Messages]
 equation_change = モデル式の変更により、以下の変数の変更が必要です：\n\n
