--- a/.gitignore
+++ b/.gitignore
@@ -127,6 +127,32 @@ dmypy.json
 # Cython debug symbols
 cython_debug/
 
-# User-specific files
+# Ruff
+.ruff_cache/
+
+# IDE/editor settings
+.vscode/
+.idea/
+*.code-workspace
+.vs/
+
+# OS junk
+.DS_Store
+Thumbs.db
+Desktop.ini
+*.lnk
+
+# Temporary files
+*~
+*.bak
+*.tmp
+*.swp
+*.swo
+*.orig
+
+# Local app/user-specific files
+.env.*
+!.env.example
+!.env.sample
 config.ini
-*.log
+config.local.ini
