add Monte Carlo propagation

--- a/config.ini
+++ b/config.ini
@@ -11,7 +11,7 @@ max_count = 30
 
 [UncertaintyRounding]
 significant_digits = 2
-rounding_mode = 5_percent  # round_up or 5_percent
+rounding_mode = round_up  # round_up or 5_percent
 
 [Language]
 current = ja
